Continue building layout, setting up routes.

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -63,7 +63,7 @@ body {
   }
 
   &::-webkit-scrollbar-thumb {
-    background-image: linear-gradient(to bottom, #434444, #626767);
+    background-image: linear-gradient(to bottom, #ffcccc, #ff5555);
     border-radius: 5rem;
   }
 
