--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -10,46 +10,31 @@
     [center-end] minmax(4rem, 1fr) [full-end];
 }
 
-// .container {
-//     display: grid;
-//     grid-template-rows: repeat(3, 40rem) 10rem;
-//     grid-template-columns:
-//       [full-start] minmax(4rem, 1fr)
-//       [center-start] repeat(
-//         10,
-//         [col-start] minmax(min-content, 11.7rem) [col-end]
-//       )
-//       [center-end] minmax(4rem, 1fr) [full-end];
-
-//     padding: 4rem 0rem;
-//   }
 .container {
   grid-column: center-start / center-end;
   grid-row: 1 / -1;
 
   display: grid;
   grid-template-columns: 28rem 1fr;
-  grid-template-rows: repeat(2, 40rem) 10rem;
+  grid-template-rows: min-content 1fr min-content;
 
   border-radius: 0.4rem;
   margin: 4rem 0rem;
   overflow: hidden;
 
   box-shadow: 0 2rem 4rem #00000031;
-}
-
-.header {
-  grid-column: 2 / 3;
-  background-color: #fdfdfd;
 
   @media only screen and (max-width: 48em) {
-    grid-column: 1 / 3;
+    grid-template-columns: 1fr;
   }
 }
 
 .main {
   grid-column: 2 / 3;
   background-color: #fdfdfd;
+
+  min-height: 75vh;
+  padding: 2rem;
 
   @media only screen and (max-width: 48em) {
     grid-column: 1 / 3;
@@ -58,6 +43,8 @@
 .footer {
   grid-column: 2 / 3;
   background-color: #fdfdfd;
+
+  padding: 2rem;
 
   @media only screen and (max-width: 48em) {
     grid-column: 1 / 3;
