--- a/client/src/components/Navigation/Navigation.scss
+++ b/client/src/components/Navigation/Navigation.scss
@@ -19,7 +19,7 @@
     background-image: linear-gradient(#ffffffd8, #e6606b83);
 
     display: grid;
-    grid-template-rows: min-content;
+    // grid-template-rows: min-content min-content 1fr;
     grid-auto-rows: min-content;
   }
 
@@ -51,6 +51,7 @@
       align-items: center;
 
       color: #e9e9e9;
+      font-weight: 300;
       text-decoration: none;
       white-space: nowrap;
 
@@ -92,5 +93,88 @@
   }
 
   &__features {
+    display: grid;
+    align-items: center;
+    grid-row-gap: 4rem;
+    // justify-items: center;
+
+    color: var(--cl-font);
+    padding: 4rem 2rem 2rem 2rem;
+
+    &--svg {
+      width: 1.6rem;
+      height: 1.6rem;
+      fill: var(--cl-font);
+      margin-right: 1rem;
+
+      transition: fill 0.3s;
+    }
+
+    &--decoration {
+    }
+
+    &--dashboard,
+    &--administration {
+      list-style: none;
+      text-transform: uppercase;
+      font-weight: 700;
+    }
+
+    &--dashboard {
+      &-item {
+        font-weight: 300;
+        text-transform: none;
+      }
+      &-link,
+      &-link:link,
+      &-link:visited {
+        display: flex;
+        align-items: center;
+
+        text-decoration: none;
+        color: var(--cl-font);
+        transition: color 0.3s;
+      }
+
+      &-link:not(:last-child) {
+        margin-right: 0.5rem;
+      }
+
+      &-link:hover,
+      &-link:active {
+        color: #ffffff;
+      }
+
+      &-link:hover .navigation__features--svg {
+        fill: #eeeeee;
+      }
+    }
+
+    &--administration {
+      &-item {
+        font-weight: 300;
+        text-transform: none;
+      }
+
+      &-link,
+      &-link:link,
+      &-link:visited {
+        display: flex;
+        align-items: center;
+
+        text-decoration: none;
+        color: var(--cl-font);
+        transition: color 0.3s;
+      }
+
+      &-link:hover,
+      &-link:active {
+        color: #eeeeee;
+      }
+
+      &-link:hover .navigation__features--svg {
+        fill: #eeeeee;
+      }
+    }
   }
 }
