--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -1,3 +1,5 @@
+/*
+
 .header {
   display: grid;
   grid-template-columns: min-content repeat(2, 1fr);
@@ -5,7 +7,11 @@
   grid-column-gap: 4rem;
 
   grid-column: 2 / 3;
-  background-color: #fdfdfd;
+  // background-color: #fdfdfd;
+  // background-color: #fff9f8;
+  background-image: linear-gradient(to right, #fff5f5, #ffdddd);
+  z-index: 3;
+  box-shadow: 0.4rem 0.2rem 0.4rem #00000042;
 
   padding: 2rem;
 
@@ -108,3 +114,5 @@
     }
   }
 }
+
+*/
