--- a/client/src/components/Navigation/Navigation.scss
+++ b/client/src/components/Navigation/Navigation.scss
@@ -1,3 +1,4 @@
+/*
 .navigation {
   grid-column: 1 / 2;
   grid-row: 1 / -1;
@@ -8,6 +9,9 @@
   color: #e9e9e9;
   // filter: blur(5px);
   // -webkit-filter: blur(8px);
+
+  z-index: 2;
+  box-shadow: 0.2rem 0.2rem 0.4rem #00000067;
 
   @media only screen and (max-width: 48em) {
     grid-column: 1 / 3;
@@ -121,3 +125,5 @@
     }
   }
 }
+
+*/
