--- a/client/src/pages/CreateSurveyPage/CreateSurveyPage.scss
+++ b/client/src/pages/CreateSurveyPage/CreateSurveyPage.scss
@@ -1,7 +1,8 @@
+/*
 .createSurveyPage {
   display: grid;
   align-content: start;
-  grid-row-gap: 2rem;
+  grid-row-gap: 8rem;
   min-height: 84vh;
 
   padding: 2rem;
@@ -11,10 +12,12 @@
     font-size: 2rem;
   }
 
-  &__surveyContainer {
+  &__form {
     display: grid;
-    grid-row-gap: 2rem;
+    grid-row-gap: 4rem;
     // padding: 1rem;
-    background-color: #f3f3f3;
+    // background-color: #f3f3f3;
   }
 }
+
+*/
