--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -36,9 +36,7 @@ html {
 // 100% / 16px * 10px = 1 rem = 62.5% 10px
 
 body {
-  font-family: var(--font-text), -apple-system, BlinkMacSystemFont, "Segoe UI",
-    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
-    "Helvetica Neue", sans-serif;
+  font-family: var(--font-text), sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 1.6rem;
