--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,3 +1,4 @@
+/*
 :root {
   // TYPOGRAPHY
   --font-title: "Open Sans", sans-serif;
@@ -105,3 +106,27 @@ code {
 #modal {
   display: none;
 }
+
+// root grid definitions
+#root {
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns:
+    [full-start] minmax(4rem, 1fr)
+    [center-start] repeat(
+      10,
+      [col-start] minmax(min-content, 11.7rem) [col-end]
+    )
+    [center-end] minmax(4rem, 1fr) [full-end];
+
+  @media only screen and (max-width: 26.563em) {
+    grid-template-columns:
+      [full-start] 1fr
+      [center-start] repeat(
+        10,
+        [col-start] minmax(min-content, 11.7rem) [col-end]
+      )
+      [center-end] 1fr [full-end];
+  }
+}
+*/
